@@ -3,6 +3,7 @@
 1. Fix issues with image based backgrounds.
 2. Don't start drag on widget tab labels.
 3. Don't remove mouse over colour for pressed combo buttons.
+4. Use gtk_rc_parse_string to hide shortcuts, and not GtkSettings
 
 1.8.3
 -----
